--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   }
