--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
